# AnimatedNoise

./: .gitignore  CMakeLists.txt  README.md  claude.md  main.cpp  utilityHelper.h
plugin/: CMakeLists.txt
plugin/UI/: AnimatedLogo.cpp  AnimatedLogo.h  AnimatedSlider.h  GpuSurface.h  MyUniforms.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.h  SliderManager.cpp  SliderManager.h  cameraState.h  dragState.h  fragmentPatterns.h  geometryMath.h  shader.wgsl  shaderLoader.h  sliderCatalog.cpp  sliderCatalog.h  utilityHelper.h  webGpuWindow.cpp  webGpuWindow.h
plugin/UI/components/camera/: cameraHelper.h  cameraState.h
plugin/UI/components/logo/: AnimatedLogo.cpp  AnimatedLogo.h
plugin/UI/components/mouse/: dragState.h
plugin/UI/components/slider/: AnimatedSlider.h  SliderManager.cpp  SliderManager.h  sliderCatalog.cpp  sliderCatalog.h
plugin/UI/components/text/: FontParser.h  FontReader.h
plugin/dsp/: AnimatedGain.cpp  AnimatedGain.h  AnimatedLPG.h  AnimatedVactrol.h  CombFilter.cpp  CombFilter.h  Envelope.h  FunctionGenerator.cpp  FunctionGenerator.h  NoiseGenerator.cpp  NoiseGenerator.h  NoiseSynth.cpp  NoiseSynth.h  NoiseVoice.cpp  NoiseVoice.h  Utils.h
plugin/geometries/: ProceduralLogo.h  cave.txt  circularFloor.h  geometryMath.h  glyphGeometry.h  levelDimensions.txt  particleSystem.h  proceduralSlider.h  sharedHelper.h  skylight.h  slider.txt  sphereGeometry.h  sphericalSlider.h  yurtBeams.h
plugin/include/: AnimatedNoiseEditor.h  AnimatedNoiseProcessor.h  GpuSurface.h  PluginEditor.h  PluginProcessor.h
plugin/procedural/: circularFloor.h  particleSystem.h  perlinCave.cpp  perlinCave.h  plane.h  proceduralCave.h  proceduralSlider.h  skylight.h  sphereGeometry.h  yurtBeams.h
plugin/resources/: cave.txt  pyramid.txt  slider.txt
plugin/shaders/: MyUniforms.h  Shader.h  common.wgsl  fs_main.wgsl  lighting.wgsl  mat_comb_slider.wgsl  mat_floor.wgsl  mat_lpg_rez_slider.wgsl  mat_noise_density_slider.wgsl  mat_particle.wgsl  mat_plane.wgsl  mat_skylight.wgsl  mat_slider.wgsl  shader.wgsl.h.in  shaderPaths.h  vs_main.wgsl
plugin/shaders/shader_materials/: common.wgsl  fs_main.wgsl  lighting.wgsl  mat_cave.wgsl  mat_comb_slider.wgsl  mat_floor.wgsl  mat_gain_slider.wgsl  mat_level.wgsl  mat_logo.wgsl  mat_lpg_rez_slider.wgsl  mat_noise_density_slider.wgsl  mat_particle.wgsl  mat_plane.wgsl  mat_skylight.wgsl  mat_slider.wgsl  mat_text.wgsl  mat_tooltip.wgsl  vs_main.wgsl
plugin/source/: AnimatedNoiseEditor.cpp  AnimatedNoiseProcessor.cpp  GpuSurface.mm  PluginEditor.cpp  PluginProcessor.cpp
plugin/utilities/: ParamIds.h
tests/: CMakeLists.txt  uniform_tests.cpp
webgpu/cmake/: FetchDawn.cmake
